# Hardening-Auditor

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
auditor/: __init__.py  __main__.py  cli.py  engine.py  host.py  models.py  registry.py  remediation.py
auditor/checks/: __init__.py  _fileperms.py  _logindefs.py  _ssh.py  _sysctl.py  _systemd.py  apparmor_enabled.py  aslr.py  auditd_enabled.py  core_dumps.py  cron_enabled.py  crontab_perms.py  disabled_services.py  firewall_active.py  group_perms.py  gshadow_perms.py  pass_max_days.py  pass_min_days.py  pass_warn_age.py  passwd_perms.py  pwquality.py  shadow_perms.py  ssh_allow_tcp_forwarding.py  ssh_ciphers.py  ssh_ignore_rhosts.py  ssh_kex.py  ssh_login_grace_time.py  ssh_loglevel.py  ssh_macs.py  ssh_max_auth_tries.py  ssh_password_auth.py  ssh_permit_empty_passwords.py  ssh_permit_root_login.py  ssh_sshd_config_perms.py  ssh_use_pam.py  ssh_x11_forwarding.py  sysctl_network.py  unattended_upgrades.py
auditor/reporters/: __init__.py  _common.py  console.py  (+3 more)
docs/: CONTROLS.md  DECISIONS.md  THREAT-MODEL.md  closeout-report.tex
tests/: conftest.py  fakes.py  test_auditd_enabled.py  test_disabled_services.py  test_engine.py  test_fileperm_controls.py  test_firewall_active.py  test_fixers.py  test_logindefs_controls.py  test_process_hardening.py  test_pwquality.py  test_remediation.py  test_reporters.py  test_shadow_perms.py  test_ssh_ciphers.py  test_ssh_directives.py  test_ssh_password_auth.py  test_ssh_permit_root_login.py  test_sysctl_network.py  test_unattended_upgrades.py
