[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-hardening-auditor"
version = "0.1.0"
description = "Audit a Linux host against the CIS Benchmark and report (and optionally remediate) deviations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Milad Bahari Qaragoz" }]
# Runtime uses the standard library only — no third-party dependencies to run an audit.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
auditor = "auditor.cli:main"

[tool.setuptools.packages.find]
include = ["auditor*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, comprehensions
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
